closed orders implemented, tests for logic bean and facade impl missing